Fix whitespace and remove flex sizing and z-index

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -53,8 +53,6 @@ body > nav {
   background: canvas;
   box-shadow: var(--shadow);
 }
-body > main   { flex: 1 }
-body > aside  { }
-body > footer { bottom: 0 }
-body > header,
-body > footer { z-index: 1 }
+body > main { }
+body > aside { }
+body > footer { }
